metriken/tests/ui/duplicate-arg.fail.stderr
error: unexpected duplicate argument `name`
 --> tests/ui/duplicate-arg.fail.rs:6:5
  |
6 |     name = "b"
  |     ^^^^
